--- a/mandeep.html
+++ b/mandeep.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/mandeep.css">
-    <link rel="stylesheet" href="/assets/css/mandeep_root.css">
+    <link rel="stylesheet" href="/assets/css/root.css">
     <title>Document</title>
 </head>
 <body>
