--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             <nav>
                 <div class="d-flex align-items-center justify-content-between">
                     <div>
-                        <a class="fw_400 ff_amrica white fs_4xl mb-0" href="#">Prime Car</a></li>
+                        <a class="fw_400 ff_amrica white fs_56 mb-0" href="#">Prime Car</a></li>
 
                     </div>
                     <div>
                         <ul class="d-flex align-items-center list-unstyled mb-0" id="show">
-                            <li><a class="fw_600 white ff_sf_pro fs_md pe-4" href="#">Home</a></li>
-                            <li><a class="fw_600 white ff_sf_pro fs_md pe-4" href="#">About</a></li>
-                            <li><a class="fw_600 white ff_sf_pro fs_md pe-4" href="#">Benefits</a></li>
-                            <li><a class="fw_600 white ff_sf_pro fs_md pe-4" href="#">Cars</a></li>
+                            <li><a class="fw_600 white ff_sf_pro fs_24 pe-4" href="#">Home</a></li>
+                            <li><a class="fw_600 white ff_sf_pro fs_24 pe-4" href="#">About</a></li>
+                            <li><a class="fw_600 white ff_sf_pro fs_24 pe-4" href="#">Benefits</a></li>
+                            <li><a class="fw_600 white ff_sf_pro fs_24 pe-4" href="#">Cars</a></li>
 
                         </ul>
                     </div>
@@ -42,12 +42,20 @@
                     </span>
 
                     <ul class="list-unstyled mb-0">
-                        <li><a class="fw_600 fs_lg ff_sf_pro white nav_btn" href="#">Contact Us</a></li>
+                        <li><a class="fw_600 fs_24 ff_sf_pro white nav_btn" href="#">Contact Us</a></li>
                     </ul>
                 </div>
             </nav>
             <div class="d-flex flex-column align-items-end">
-                <p class="fw_400 ff_amrica fs_8xl white max_width_811_lg text-end" >More economy, same speed</p>
+                <p class="fw_400 ff_amrica fs_130 white max_width_811_ text-end line_height_2">More economy, same speed</p>
+                <p class="ff_sf_pro fw_600 fs_32 white max_width_311_lg text-end">The most beloved cars of the moment for those
+                    who want to ride in style without spending too much</p>
+                <li class="mb-5"><a class="fw_600 fs_24 ff_sf_pro white nav_btn " href="#">Discover <svg width="16" height="17" viewBox="0 0 16 17" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path d="M15 1.5L1 15.5M3.33333 1.5H15V13.1667" stroke="white" stroke-width="2"
+                                stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                    </a></li>
             </div>
         </div>
 
