--- a/mandeep.html
+++ b/mandeep.html
@@ -15,40 +15,61 @@
 
 <body>
     <div class="bg_black">
-        <div class="container">
+        <!-- div-2 -->
+        <div class="container pb-5">
             <p class="fs_120 ff_amrica fw_400 white text-center">About Us</p>
-            <div class="row align-items-center">
-                <div class="col-12 col-lg-6">
-                    <div class="">
-                        <p class="ff_sf_pro fw_400 fs_24 white line_h_28">We pride ourselves at being able to get our
-                            customer into
-                            the car that they want, and more
-                            importantly, at they price
-                            they are looking for.</p>
+            <div class="row align-items-center flex-column-reverse flex-xl-row">
+                <div class="col-12 col-xl-6">
+                    <p class="ff_sf_pro fw_400 fs_20 white line_h_28 pt-5 pt-xl-0">We pride ourselves at being able to
+                        get our
+                        customer into
+                        the car that they want, and more
+                        importantly, at they price
+                        they are looking for.</p>
 
-                        <p class="ff_sf_pro fw_400 fs_24 white line_h_28"> We maintain outstanding customer service by
-                            listening to
-                            our customers and making sure that
-                            we
-                            meet their needs. Even if
-                            you don't buy from us, we will offer free advice on whe to look for when buying a used car
-                            or
-                            truck.</p>
-                        <p class="ff_sf_pro fw_400 fs_24 white line_h_28">
-                            Our philosophy is to accomodate you, the customer, with outstanding service while providing
-                            you
-                            the highest quality
-                            automobile needs at wholesale prices. We have a wide selection of vehicles and the expertise
-                            to
-                            deal with what you are
-                            looking for.
-                        </p>
-                    </div>
+                    <p class="ff_sf_pro fw_400 fs_20 white line_h_28"> We maintain outstanding customer service by
+                        listening to
+                        our customers and making sure that
+                        we
+                        meet their needs. Even if
+                        you don't buy from us, we will offer free advice on whe to look for when buying a used car
+                        or
+                        truck.</p>
+                    <p class="ff_sf_pro fw_400 fs_20 white line_h_28">
+                        Our philosophy is to accomodate you, the customer, with outstanding service while providing
+                        you
+                        the highest quality
+                        automobile needs at wholesale prices. We have a wide selection of vehicles and the expertise
+                        to
+                        deal with what you are
+                        looking for.
+                    </p>
                 </div>
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-xl-6">
                     <img class="w-100" src="./assets/image/svg/2car.png" alt="car">
                 </div>
             </div>
+        </div>
+        <!-- div-4 -->
+        <div class="container pt-5">
+            <p class="fw_400 fs_110 ff_amrica white">The cars that are hot right now</p>
+            <p class="fw_400 fs_24 ff_sf_pro white line_h_28 pb-5">Buy yours and be the most stylish in the neighborhood
+            </p>
+        </div>
+        <div class="d_grid">
+            <div class="s_row_1">
+                <img class="w-100" src="./assets/image/svg/slider1.png" alt="car">
+            </div>
+            <div class="s_row_2">
+                <img class="w-100" src="./assets/image/svg/slider1.png" alt="car">
+            </div>
+            <div class="s_row_3">
+                <img class="w-100" src="./assets/image/svg/slider1.png" alt="car">
+            </div>
+            <div class="s_row_4">
+                <img class="w-100" src="./assets/image/svg/slider1.png" alt="car">
+            </div>
+
         </div>
     </div>
 
