--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
 <body>
     <header class="bg_image">
-        <div class="container">
+        <div class="container container_xxl">
+            <!-- ...............................nav............................... -->
             <nav>
                 <div class="d-flex align-items-center justify-content-between">
                     <div>
@@ -28,10 +29,10 @@
                     </div>
                     <div>
                         <ul class="d-flex align-items-center list-unstyled mb-0" id="show">
-                            <li><a class="fw_600 white ff_sf_pro fs_24 pe-4" href="#">Home</a></li>
-                            <li><a class="fw_600 white ff_sf_pro fs_24 pe-4" href="#">About</a></li>
-                            <li><a class="fw_600 white ff_sf_pro fs_24 pe-4" href="#">Benefits</a></li>
-                            <li><a class="fw_600 white ff_sf_pro fs_24 pe-4" href="#">Cars</a></li>
+                            <li><a class="fw_500 white ff_sf_pro fs_24 pe-4" href="#">Home</a></li>
+                            <li><a class="fw_500 white ff_sf_pro fs_24 pe-4" href="#">About</a></li>
+                            <li><a class="fw_500 white ff_sf_pro fs_24 pe-4" href="#">Benefits</a></li>
+                            <li><a class="fw_500 white ff_sf_pro fs_24 pe-4" href="#">Cars</a></li>
 
                         </ul>
                     </div>
@@ -46,12 +47,17 @@
                     </ul>
                 </div>
             </nav>
-            <div class="d-flex flex-column align-items-end">
-                <p class="fw_400 ff_amrica fs_130 white max_width_811_ text-end line_height_2">More economy, same speed</p>
-                <p class="ff_sf_pro fw_600 fs_32 white max_width_311_lg text-end">The most beloved cars of the moment for those
+            <!-- ......................................nav_end.................. -->
+
+            <!-- .......................hero_section........................ -->
+            <div class="d-flex flex-column align-items-end pb-5">
+                <p class="fw_400 ff_amrica fs_130 white max_width_811_ text-end line_height_2">More economy, same speed
+                </p>
+                <p class="ff_sf_pro fw_600 fs_32 white max_width_311_lg text-end">The most beloved cars of the moment
+                    for those
                     who want to ride in style without spending too much</p>
-                <li class="mb-5"><a class="fw_600 fs_24 ff_sf_pro white nav_btn " href="#">Discover <svg width="16" height="17" viewBox="0 0 16 17" fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
+                <li class="mb-5"><a class="fw_600 fs_24 ff_sf_pro white nav_btn " href="#">Discover <svg width="16"
+                            height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M15 1.5L1 15.5M3.33333 1.5H15V13.1667" stroke="white" stroke-width="2"
                                 stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
@@ -60,9 +66,131 @@
         </div>
 
     </header>
+    <!-- .............................................3rd_section................................... -->
+    <div class="bg_black position-relative overflow-hidden">
+        <div class="position-relative">
+            <img class="position-absolute " src="/assets/image/svg/Lines(1).png" alt="line">
+        </div>
+        <div class="container container_xxl py-5 ">
+            <div>
+                <p class="fw_400 fs_110 ff_amrica white text-center pt-lg-5 line_height_2 max_width_1284 me-auto ms-auto">
+                    All the benefits you will get when you
+                    shop with us
+                </p>
+                <p class="fw_400 white ff_sf_pro text-center pb-5">Take advantage of everything you can have now by
+                    buying
+                    your new car at Prime Car</p>
+            </div>
+            <div class="row justify-content-evenly mt-5  pb-5 py-5">
+                <div class="col-12 col-md-6 col-lg-4 ">
+                    <div class="bg_green box position-relative d-flex flex-column align-items-center ">
+
+                        <img class=" position-absolute img_green_box" src="/assets/image/svg/green_box_img.png"
+                            alt="green_box_img">
+                        <div class="">
+                            <p class="fw_700 ff_sf_pro fs_32 white pt-5 mt-5 text-center">Several Headquarters</p>
+
+                        </div>
+                        <div class="align-items-center d-flex flex-column justify-content-center">
+                            <p class="fw_500 fs_24 ff_sf_pro white text-center">You can find several Prime Car
+                                stores
+                                around the
+                                United
+                                States!</p>
+                            <p class="fw_500 fs_24 ff_sf_pro white text-center">Find the store closest to you now</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 pt-5 pt-md-0 mt-5 mt-md-0">
+                    <div class="box bg_red position-relative d-flex flex-column align-items-center">
+                        <div class="">
+                            <img class=" position-absolute img_green_box" src="/assets/image/svg/red_box_img.png"
+                                alt="green_box_img">
+                        </div>
+                        <div>
+                            <p class="fw_700 ff_sf_pro fs_32 white  text-center pt-5 mt-5">Schedule Your Best Day
+
+                        </div>
+                        <div class="align-items-center d-flex flex-column justify-content-center">
+                            </p>
+                            <p class="fw_500 fs_24 ff_sf_pro white text-center">
+                                Choose the day and time to take a test drive for free!</p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 pt-5 pt-lg-0 mt-5 mt-lg-0 ">
+                    <div class="box w-100 bg_blue position-relative d-flex flex-column align-items-center mt-4 mt-lg-0">
+                        <div class="">
+                            <img class=" position-absolute img_green_box " src="/assets/image/svg/blue_box_img.png"
+                                alt="green_box_img">
+                        </div>
+                        <div>
+                            <p class="fw_700 ff_sf_pro fs_32 white mx-auto  text-center  pt-5 mt-5">Receive your car
+                                right away</p>
+                        </div>
+                        <div class="">
+                            <p class="fw_500 fs_24 ff_sf_pro white text-center">
+                                Close the contract and you get the keys right away</p>
+                        </div>
+                    </div>
+
+                </div>
 
 
+            </div>
+        </div>
+        <img class="position-absolute lines " src="/assets/image/svg/Lines2.png" alt="line">
 
+    </div>
+    <!-- .........................5th_section........................ -->
+    <div class="bg_black position-relative overflow-hidden">
+        <div>
+            <img class="position-absolute  green_star d-none d-xxl-block" src="/assets/image/svg/green_star.png" alt="green__star">
+
+        </div>
+        <div class="container container_xxl">
+            <div class="d-flex justify-content-between align-items-center">
+
+                <div>
+                    <p class="fw_400 fs_130 ff_amrica white max_width_700 line_height_2 position-relative">Be amazed by
+                        the power</p>
+                </div>
+                <div>
+                    <p class="fw_400 ff_sf_pro fs_132 ff_sf_pro white max_width_200">Speed and economy together in one
+                        place, use and
+                        abuse your car's potential.</p>
+                </div>
+            </div>
+            <div class="position-relative align-items-center ">
+
+                <div class="play_btn text-center align-items-center d-flex justify-content-center position-absolute ">
+                    <svg width="49" height="50" viewBox="0 0 49 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M46.9515 21.5922L5.27677 0.350898C4.71456 0.0853684 4.09612 -0.0326008 3.47776 0.00772819C2.8594 0.0480572 2.26076 0.245404 1.73632 0.581804C1.21188 0.918204 0.778314 1.38297 0.475077 1.9338C0.171841 2.48463 0.0085697 3.10403 0.000126014 3.73561V46.2C-0.00512438 46.8483 0.153777 47.487 0.461471 48.0544C0.769166 48.6219 1.21525 49.0988 1.7566 49.4391C2.29796 49.7794 2.91627 49.9716 3.55179 49.9971C4.18731 50.0226 4.81854 49.8805 5.38446 49.5847L46.9515 28.3433C47.5673 28.0283 48.0849 27.5449 48.4467 26.9471C48.8084 26.3494 49 25.661 49 24.9586C49 24.2563 48.8084 23.5678 48.4467 22.9701C48.0849 22.3724 47.5673 21.889 46.9515 21.5739V21.5922Z"
+                            fill="white" />
+                    </svg>
+
+                </div>
+
+                <img class="w-100 mb-5" src="/assets/image/svg/car_image.png" alt="img">
+
+            </div>
+             <div class="overflow">
+                <img class="position-absolute blue_star d-none d-xxl-block" src="/assets/image/svg/Star2.png" alt="">
+            </div>
+
+        </div>
+    </div>
+    <!-- .....................................map_section.......................................... -->
+     <div class="">
+        <div class="map w-100">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3482.8261183610475!2d75.8773491150223!3d29.19924578219766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391231f60a0839b5%3A0x88d715ee7267706e!2sVishal%20Jaat!5e0!3m2!1sen!2sin!4v1678958089660!5m2!1sen!2sin"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade" class="map w-100"></iframe>
+        </div>
+    </div>
 
 
 
