--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <header class="bg_image">
+    <header class="bg_image vh-100 d-flex flex-column">
         <div class="container container_xxl">
             <!-- ...............................nav............................... -->
             <nav>
@@ -47,21 +47,24 @@
                     </ul>
                 </div>
             </nav>
-            <!-- ......................................nav_end.................. -->
+        </div>
+        <!-- ......................................nav_end.................. -->
 
-            <!-- .......................hero_section........................ -->
+        <!-- .......................hero_section........................ -->
+        <div class="container container_xxl d-flex justify-content-end flex-grow-1 align-items-center">
+
             <div class="d-flex flex-column align-items-end pb-5">
                 <p class="fw_400 ff_amrica fs_130 white max_width_811_ text-end line_height_2">More economy, same speed
                 </p>
                 <p class="ff_sf_pro fw_600 fs_32 white max_width_311_lg text-end">The most beloved cars of the moment
                     for those
                     who want to ride in style without spending too much</p>
-                <li class="mb-5"><a class="fw_600 fs_24 ff_sf_pro white nav_btn " href="#">Discover <svg width="16"
-                            height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M15 1.5L1 15.5M3.33333 1.5H15V13.1667" stroke="white" stroke-width="2"
-                                stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                    </a></li>
+                <a class="fw_600 fs_24 ff_sf_pro white nav_btn " href="#">Discover <svg width="16" height="17"
+                        viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15 1.5L1 15.5M3.33333 1.5H15V13.1667" stroke="white" stroke-width="2"
+                            stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                </a>
             </div>
         </div>
 
@@ -69,11 +72,12 @@
     <!-- .............................................3rd_section................................... -->
     <div class="bg_black position-relative overflow-hidden">
         <div class="position-relative">
-            <img class="position-absolute " src="/assets/image/svg/Lines(1).png" alt="line">
+            <img class="position-absolute d-none d-xxl-block" src="/assets/image/svg/Lines(1).png" alt="line">
         </div>
         <div class="container container_xxl py-5 ">
             <div>
-                <p class="fw_400 fs_110 ff_amrica white text-center pt-lg-5 line_height_2 max_width_1284 me-auto ms-auto">
+                <p
+                    class="fw_400 fs_110 ff_amrica white text-center pt-lg-5 line_height_2 max_width_1284 me-auto ms-auto">
                     All the benefits you will get when you
                     shop with us
                 </p>
@@ -140,24 +144,28 @@
 
             </div>
         </div>
-        <img class="position-absolute lines " src="/assets/image/svg/Lines2.png" alt="line">
+        <img class="position-absolute lines d-none d-xxl-block" src="/assets/image/svg/Lines2.png" alt="line">
 
     </div>
     <!-- .........................5th_section........................ -->
-    <div class="bg_black position-relative overflow-hidden">
+    <div class="bg_black position-relative overflow-hidden ">
         <div>
-            <img class="position-absolute  green_star d-none d-xxl-block" src="/assets/image/svg/green_star.png" alt="green__star">
+            <img class="position-absolute  green_star d-none d-xxl-block" src="/assets/image/svg/green_star.png"
+                alt="green__star">
 
         </div>
         <div class="container container_xxl">
-            <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex justify-content-between align-items-center flex-column flex-lg-row">
 
                 <div>
-                    <p class="fw_400 fs_130 ff_amrica white max_width_700 line_height_2 position-relative">Be amazed by
+                    <p
+                        class="fw_400 fs_130 ff_amrica white max_width_700 line_height_2 position-relative text-center text-lg-start">
+                        Be amazed by
                         the power</p>
                 </div>
                 <div>
-                    <p class="fw_400 ff_sf_pro fs_132 ff_sf_pro white max_width_200">Speed and economy together in one
+                    <p class="fw_400 ff_sf_pro fs_132 ff_sf_pro white max_width_200 text-center text-lg-start">Speed and
+                        economy together in one
                         place, use and
                         abuse your car's potential.</p>
                 </div>
@@ -165,26 +173,24 @@
             <div class="position-relative align-items-center ">
 
                 <div class="play_btn text-center align-items-center d-flex justify-content-center position-absolute ">
-                    <svg width="49" height="50" viewBox="0 0 49 50" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M46.9515 21.5922L5.27677 0.350898C4.71456 0.0853684 4.09612 -0.0326008 3.47776 0.00772819C2.8594 0.0480572 2.26076 0.245404 1.73632 0.581804C1.21188 0.918204 0.778314 1.38297 0.475077 1.9338C0.171841 2.48463 0.0085697 3.10403 0.000126014 3.73561V46.2C-0.00512438 46.8483 0.153777 47.487 0.461471 48.0544C0.769166 48.6219 1.21525 49.0988 1.7566 49.4391C2.29796 49.7794 2.91627 49.9716 3.55179 49.9971C4.18731 50.0226 4.81854 49.8805 5.38446 49.5847L46.9515 28.3433C47.5673 28.0283 48.0849 27.5449 48.4467 26.9471C48.8084 26.3494 49 25.661 49 24.9586C49 24.2563 48.8084 23.5678 48.4467 22.9701C48.0849 22.3724 47.5673 21.889 46.9515 21.5739V21.5922Z"
-                            fill="white" />
-                    </svg>
-
+                    <a href="#"><img class="width_80px_lg width_50_lg" src="/assets/image/svg/play.png" alt="">
+                    </a>
                 </div>
 
                 <img class="w-100 mb-5" src="/assets/image/svg/car_image.png" alt="img">
 
             </div>
-             <div class="overflow">
+            <div class="overflow">
                 <img class="position-absolute blue_star d-none d-xxl-block" src="/assets/image/svg/Star2.png" alt="">
             </div>
 
         </div>
     </div>
+
+
     <!-- .....................................map_section.......................................... -->
-     <div class="">
-        <div class="map w-100">
+    <div class="">
+        <div class="map w-100 ">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3482.8261183610475!2d75.8773491150223!3d29.19924578219766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391231f60a0839b5%3A0x88d715ee7267706e!2sVishal%20Jaat!5e0!3m2!1sen!2sin!4v1678958089660!5m2!1sen!2sin"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
@@ -193,8 +199,69 @@
     </div>
 
 
+    <!-- ...........................................fotter........................... -->
+    <div class="bg_black">
+        <div class="container container_xxl">
+            <div class="row pt-5">
+                <div class="col-12 col-lg-4">
+                    <p class="ff_amrica fw_400 white fs_100 ">Prime Car</p>
+                </div>
+                <div class="col-12 col-lg-8 ">
+                    <div class="row">
+                        <div class="col-6 col-md-3">
+                            <ul class="list-unstyled">
+                                <li><a href="#" class="fw_500 fs_32 ff_sf_pro white">Where are we</a></li>
+                                <li><a href="#" class="ff_sf_pro fw_400 fs_17 grey pt-2">Georgia</a></li>
+                                <li><a href="#" class="ff_sf_pro fw_400 fs_17 grey pt-2">Texas</a></li>
+                                <li><a href="#" class="ff_sf_pro fw_400 fs_17 grey pt-2">California</a></li>
+                                <li><a href="#" class="ff_sf_pro fw_400 fs_17 grey pt-2">Virginia</a></li>
+                                <li><a href="#" class="ff_sf_pro fw_400 fs_17 grey pt-2">Colorado</a></li>
+                                <li><a href="#" class="ff_sf_pro fw_400 fs_17 grey pt-2">Pennsylvania</a></li>
+                                <li><a href="#" class="ff_sf_pro fw_400 fs_17 grey pt-2">Massachusetts</a></li>
 
+                            </ul>
+                        </div>
+                        <div class="col-6 col-md-3">
+                            <li><a href="#" class="fw_500 fs_32 ff_sf_pro white">Quick links</a></li>
+                            <li><a href="#" class="ff_sf_pro fw_400 fs_17 grey pt-2">Georgia</a></li>
+                            <li><a href="#" class="ff_sf_pro fw_400 fs_17 grey pt-2">Texas</a></li>
+                            <li><a href="#" class="ff_sf_pro fw_400 fs_17 grey pt-2">California</a></li>
 
+                        </div>
+                        <div class="col-6 col-md-3">
+                            <li><a href="#" class="fw_500 fs_32 ff_sf_pro white">Email Us</a></li>
+                            <li><a href="#" class="ff_sf_pro fw_400 fs_17 grey pt-2">contact@primecar.com</a></li>
+
+                        </div>
+                        <div class="col-6 col-md-3">
+                            <li><a href="#" class="fw_500 fs_32 ff_sf_pro white">Call Us</a></li>
+                            <li><a href="#" class="ff_sf_pro fw_400 fs_17 grey pt-2">+999-9-999-9999</a></li>
+                            <li><a href="#" class="ff_sf_pro fw_400 fs_17 grey pt-4">+111-11-111-1111</a></li>
+                            <div class="pt-3">
+                                <a href="#"><img src="/assets/image/svg/Facebook.png" alt="Facebook">
+                                </a>
+                                <a href="#"><img src="/assets/image/svg/LinkedIn.png" alt="LinkedIn">
+                                </a>
+                                <a href="#"><img src="/assets/image/svg/Instagram.png" alt="Instagram">
+                                </a>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex justify-content-between pt-5 flex-column flex-md-row pb-4 ">
+                <div class="d-flex">
+                    <p class="fw_400 ff_Helvetica fs_15 white ">Privacy policy</p>
+                    <p class="fw_400 ff_Helvetica fs_15 white ps-4">Term and conditions</p>
+                </div>
+                <div>
+                    <p class="fw_400 ff_Helvetica fs_15 white">Copyright © 2022 Prime Car. All Rights Reserved</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
 
 
 
