--- a/index.html
+++ b/index.html
@@ -458,11 +458,11 @@
             </div>
             <div class="d-flex justify-content-between pt-5 flex-column flex-md-row pb-4 ">
                 <div class="d-flex">
-                    <p class="fw_400 ff_Helvetica fs_15 white ">Privacy policy</p>
-                    <p class="fw_400 ff_Helvetica fs_15 white ps-4">Term and conditions</p>
+                   <p class="text_line_efect position-relative"><a href="#" class="fw_400 ff_Helvetica fs_15 white ">Privacy policy </a></p>
+                    <p class="text_line_efect position-relative"><a href="#" class="fw_400 ff_Helvetica fs_15 white ps-4">Term and conditions</a></p>
                 </div>
                 <div>
-                    <p class="fw_400 ff_Helvetica fs_15 white">Copyright © 2022 Prime Car. All Rights Reserved</p>
+                    <p  class="text_line_efect position-relative"><a href="#" class="fw_400 ff_Helvetica fs_15 white">Copyright © 2022 Prime Car. All Rights Reserved</a></p>
                 </div>
             </div>
 
