fav_icon_change

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- ........................................link_root............... -->
     <link rel="stylesheet" href="/assets/css/root.css">
     <!-- .........................link_fav_icon......................... -->
-    <link rel="shortcut icon" href="/assets/image/svg/Star1.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/image/svg/green_star.png" type="image/x-icon">
     <title>landing_page</title>
 </head>
 
